AMQP, sign in, sign up

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=user-service
-spring.datasource.url=jdbc:postgresql://localhost:5432/user-service-kanban
-spring.datasource.username=postgres
-spring.datasource.password=postgresqlpw
+spring.datasource.url=jdbc:postgresql://localhost:${PORT}/user-service-kanban
+spring.datasource.username=${user}
+spring.datasource.password=${password}
+server.port=8085
 # Configurar el dialecto de PostgreSQL para Hibernate
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=create-drop
